<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <action
        android:id="@+id/action_global_aboutFragment"
        app:destination="@id/aboutActivity2"/>


    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.nav4.MainFragment"
        android:label="fragment_main"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_fragment2"
            app:destination="@id/fragment2" />
    </fragment>
    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.nav4.Fragment2"
        android:label="fragment_2"
        tools:layout="@layout/fragment_2" >
        <action
            android:id="@+id/action_fragment2_to_fragment3"
            app:destination="@id/fragment3" />
        <action
            android:id="@+id/action11"
            app:popUpTo="@id/mainFragment"/>
    </fragment>
    <fragment
        android:id="@+id/fragment3"
        android:name="com.example.nav4.Fragment3"
        android:label="fragment_3"
        tools:layout="@layout/fragment_3" />
    <activity
        android:id="@+id/aboutActivity2"
        android:name="com.example.nav4.AboutActivity"
        android:label="activity_about"
        tools:layout="@layout/activity_about" />
</navigation>